# QuizBox

./: .gitignore  AGENTS.md  README.md  components.d.ts  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
.githooks/: pre-commit  prepare-commit-msg
.github/workflows/: ci.yml
api/: bank.ts
api/webdav/: [...path].ts
docs/: known-issues-cors.md  parser-improvements.md  token-optimization.md  vercel-deploy.md  习题总-带答案.docx  马克思主义基本原理总题库.docx
scripts/: bump-version.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ActionPopover.vue  AdminDialog.vue  AnswerCard.vue  AttachmentImage.vue  ExamResult.vue  QuestionCard.vue  QuizRunner.vue  RichText.vue  ThemedSelect.vue
src/db/: attempts.ts  examSessions.ts  index.ts  questions.ts  wrongbook.ts
src/router/: index.ts
src/services/: ai-providers.ts  ai.ts  doc-parser.ts  docx-images.ts  docx-parser.ts  file-parser.ts  grading.ts  importer.ts  md-parser.ts  pdf-parser.ts  profile-parser.ts  rule-parser.ts  sync.ts
src/stores/: admin.ts  settings.ts  subjects.ts  sync.ts
src/styles/: global.css
src/themes/: tokens.ts
src/types/: index.ts
src/utils/: crypto.ts  debounce.ts  hash.ts  katex.ts  shuffle.ts  sm2.ts
src/views/: ExamView.vue  HomeView.vue  ImportView.vue  LibraryView.vue  MyPracticeView.vue  PracticeView.vue  SearchView.vue  SettingsView.vue  SetupView.vue  SubjectDetailView.vue  WrongBookView.vue
(+1 files in other folders)
