[package]
name = "qasystem"
version = "1.54"
description = "题盒 QuizBox"
authors = ["you"]
edition = "2021"

[lib]
name = "qasystem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
